# cmake-learn

./: .gitignore  README.md
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/src/: Hello.cpp  main.cpp
01-basic/C-static-libary/: CMakeLists.txt
01-basic/C-static-libary/src/: Hello.cpp  main.cpp
01-basic/D-shared-libary/: CMakeLists.txt
01-basic/D-shared-libary/include/shared/: Hello.h
01-basic/D-shared-libary/src/: Hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt
01-basic/E-installing/src/: Hello.cpp  main.cpp
